#190 Add Java 25 Support - DRAFT PR
Adding Java 25 support.